--- a/frontend/src/app/dashboard-admin/aside/aside.component.html
+++ b/frontend/src/app/dashboard-admin/aside/aside.component.html
@@ -179,9 +179,9 @@
       </div>
     </div>
   </div>
-    <button class="toggle-btn" (click)="toggleSidebar()">
+    <!-- <button class="toggle-btn" (click)="toggleSidebar()">
     <i class="fa" [ngClass]="{'fa-arrow-left': !isCollapsed, 'fa-arrow-right': isCollapsed}"></i>
-  </button>
+  </button> -->
 
 </aside>
 
