--- a/frontend/src/app/dashboard/aside/aside.component.html
+++ b/frontend/src/app/dashboard/aside/aside.component.html
@@ -39,7 +39,7 @@
     </a>
     <div class="profile" (click)="openEditModal()">
       <i class="fa-solid fa-user"></i>
-      <span *ngIf="!isCollapsed">mariem.sebei...</span>
+      <span *ngIf="!isCollapsed">gassouma.samia...</span>
     </div>
   </div>
 
